# openai-transcriber

./: .gitignore  README.md  pyproject.toml
transcriber/: main.py
